# deal

./: Cargo.toml  Makefile  README.md  dist-workspace.toml  flake.nix  shell.nix
.github/workflows/: update-flake.yaml
src/: main.rs
src/extractors/: bz2.rs  gz.rs  gz_test.rs  mod.rs  rar.rs  raw.rs  sevenz.rs  sevenz_test.rs  tar.rs  tar_test.rs  tarbz2.rs  tarbz2_test.rs  targz.rs  targz_test.rs  tarxz.rs  tarxz_test.rs  xz.rs  zip.rs  zip_test.rs
wix/: main.wxs
