[package]
name = "deal"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/labi-le/deal"
authors = ["labi-le"]
license = "MIT"

[package.metadata.wix]
upgrade-guid = "52242627-3B47-494B-916D-CB0FF6CB60D7"
path-guid = "0A6587C9-39F3-428E-A7F6-502F18B7892E"
license = false
eula = false

[dependencies]
tar = "0.4"
flate2 = "1.0"# .gz
bzip2 = "0.6.0"
zip = { version = "4.3.0",  default-features = false,features = ["bzip2", "deflate"] }
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "blocking", "stream"] }
indicatif = "0.18.0"
xz2 = "0.1.7"
sevenz-rust = "0.6.1"
log = "0.4.27"
env_logger = "0.11.8"

[dev-dependencies]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

