[package]
name = "deal"
version = "0.1.2"
edition = "2024"
repository = "https://github.com/labi-le/deal"
authors = ["labi-le"]
license = "MIT"
description = "deal provides one command to handle any archive, so you can finally stop googling 'how to unpack X-format'"

[package.metadata.wix]
upgrade-guid = "52242627-3B47-494B-916D-CB0FF6CB60D7"
path-guid = "0A6587C9-39F3-428E-A7F6-502F18B7892E"
license = false
eula = false

[package.metadata.release]
pre-release-commit-message = "release {{crate_name}} v{{version}}"
tag-message = "{{crate_name}} v{{version}}"
tag = true
push = false
publish = false

[dependencies]
tar = "0.4"
flate2 = "1.0"# .gz
bzip2 = "0.6.0"
zip = { version = "4.6.0",  default-features = false,features = ["bzip2", "deflate"] }
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "blocking", "stream"] }
indicatif = "0.18.0"
xz2 = "0.1.7"
sevenz-rust = "0.6.1"
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.5.45", features = ["derive"] }
tempfile = "3.21.0"

[dev-dependencies]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

